apps/radarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "kube-system-secure-headers@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - radarr.greiner.home
      secretName: radarr-tls
  rules:
    - host: radarr.greiner.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
